# Vision2026

./: README.md
config/: autonomy.yaml  detector_bottom.yaml  detector_front.yaml  localization.yaml  localization_front.yaml  mapping.yaml  zed_bottom.yaml  zed_front.yaml
docker/: Dockerfile.dev  Dockerfile.jetson  docker-compose.yml
docs/: architecture.md
ros_ws/src/bringup/: CMakeLists.txt  package.xml
ros_ws/src/bringup/launch/: front_only.launch.py
ros_ws/src/localization/: package.xml  setup.py
ros_ws/src/localization/localization/: __init__.py  front_pose_node.py
scripts/: build.sh  convert_trt.sh  export_onnx.sh  run_dev.sh  run_jetson.sh
