<?xml version="1.0"?>
<package format="3">
  <name>bringup</name>
  <version>0.0.1</version>
  <description>Launch files and runtime wiring for the RoboSub vision pipeline.</description>

  <maintainer email="todo@example.com">TODO</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>localization</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>zed_wrapper</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
